@@ -1,3 +1,7 @@
+2012-10-04 Tsi YANG <tsi@in-cite.net>
+	* Refactor: Added hook renderFilegroupExtraFields.
+	* Refactor: Coordinates BE and FE dataset's locallang.
+
 2012-10-02 Tsi YANG <tsi@in-cite.net>
 	* Fix: Comments error code on pi1.
 	* Feature: Added fe_users logo on datastore signle view.
